unreleased
==========

Backward Incompatibilities
--------------------------

 - Following the Pyramid deprecation period (1.6 -> 1.8),
   daemon support for pserve has been removed. This includes removing the
   daemon commands (start, stop, restart, status) as well as the following
   arguments:
   --daemon --pid-file --log-file --monitor-restart --status --user --group
   --stop-daemon

   To run your server as a daemon you should use a process manager instead of
   pserve.

Features
--------

Bug Fixes
---------

- Fixed bug in `proutes` such that it now shows the correct view when a class
  and `attr` is involved.
  See: https://github.com/Pylons/pyramid/pull/2687

- The JSON renderers now encode their result as UTF-8. The renderer helper
  will now warn the user and encode the result as UTF-8 if a renderer returns a
  text type and the response does not have a valid character set. See
  https://github.com/Pylons/pyramid/pull/2706

Deprecations
------------

Documentation Changes
---------------------
- Updated Windows installation instructions and related bits.
  See: https://github.com/Pylons/pyramid/issues/2661